--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -69,8 +69,7 @@
         <section class="ofertas">
           <% paquetes.forEach(producto => { %> 
             <article class="producto">
-            <a href="/paquetes/detail/<%= producto.id %>">
-            <img src="/img/paquetes/<%= producto.imagen%>" alt="<%= producto.destino %>" class="imagenes"/>
+              <img src="/img/capilla.jpg" alt="Capilla del monte" class="imagenes"/>
               <section class="articulo">
                 <i class="fa-solid fa-plane-departure"></i>
                 <div class="nombres-precios">
