--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbarsExample04">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" href="/paquetes">Paquetes</a>
+              <a class="nav-link" href="/paquetes">Ofertas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/session">Ingresar</a>
@@ -30,6 +30,9 @@
             <li class="nav-item carrito" style="display: flex" ;>
               <i class="fas fa-shopping-cart"></i>
               <a class="nav-link" href="/productCart" style="position: absolute";></a>
+            </li>
+            <li class="nav-item">
+              <img class="img_perfil" src="/img/profileImages/%1682901214330.jpg%" alt="Imagen de perfil">
             </li>
           </ul>
         </div>
