--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -69,7 +69,7 @@
               <div class="styledate">
                 <label for="imagenUsuario">Imagen de Perfil</label>
                 <br>
-                <input type="file" id= "imagenUsuario" name="imagenUsuario" placeholder="Agregar imagen de perfil" class ="styleinput
+                <input type="file" id= "imagenUsuario" name="imagenUsuario" placeholder="Agregar imagen de perfil" class ="styleinput"
                 <%= locals.errors && errors.imagenUsuario ? "is-invalid": null %>"
                 > 
                 <% if (locals.errors && errors.imagenUsuario) { %>
