--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -16,7 +16,7 @@
                   <h2><%= producto.destino %></h2>
                   <h2><%= producto.periodo %></h2>
                   <h3>Precio: $<%= producto.precio %></h3>
-                  <button>Agregar al carrito</button>
+                  <button type="submit">Agregar al carrito</button>
                 </div>
               </main>
             
