--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -32,7 +32,7 @@
               <a class="nav-link" href="/productCart" style="position: absolute";></a>
             </li>
             <li class="nav-item">
-              <img class="img_perfil" src="/img/profileImages/%1682901214330.jpg%" alt="Imagen de perfil">
+              <img class="img_perfil" src="/img/profileImages/1682901214330.jpg" alt="Imagen de perfil">
             </li>
           </ul>
         </div>
