se agrega boton eliminar en modificar

--- a/src/views/formCarga.ejs
+++ b/src/views/formCarga.ejs
@@ -73,7 +73,7 @@
                 <option value="">Selecciona una opción</option>
                 <option value="semana">7</option>
                 <option value="quincena">14</option>
-                <option value="mes">30</option>
+                <option value="21">21</option>
                 </select>
 
             <label class="graf" for="oferta">Porcentaje de Oferta:</label>
@@ -84,6 +84,8 @@
                 <option value="20">20</option>
                 <option value="30">30</option>
                 </select>
+                <br>
+                <br>
 
             <input type="submit" value="Enviar">
             <input type="reset" value="Borrar">
