--- a/public/css/formCarga.css
+++ b/public/css/formCarga.css
@@ -103,3 +103,12 @@ form {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.borrardato{
+    background-color: red;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 8px;
+}
