--- a/src/views/modifProducto.ejs
+++ b/src/views/modifProducto.ejs
@@ -32,6 +32,7 @@
 
                         <input type="submit" value="Enviar">
                         <input type="reset" value="Borrar">
+                        <button action="/paquetes/deleteProducto/delete" method="post" type="text" id="id" class="borrardato">Eliminar</button>
             </div>
         </form>
 
