--- a/src/views/modifProducto.ejs
+++ b/src/views/modifProducto.ejs
@@ -32,14 +32,9 @@
 
                         <input type="submit" value="Enviar">
                         <input type="reset" value="Borrar">
-                        <form action="/paquetes/deleteProducto/delete" method="post">
                         <button type="text" name= "id" id="id" class="borrardato">Eliminar</button>
-<!--                         <form action="/paquetes/deleteProducto/delete" method="post">
-                            <input type="hidden" name="id" value="<%= producto.id %>">
-                            <button type="submit" class="borrardato">Eliminar</button>
-                          </form>    --> 
-                        </form>
-                    </div>  
+
+</div>              </div>  
         </form>
 
         <%- include('partials/footer.ejs'); -%>
