arreglando el css del userProfile

--- a/src/views/userProfile.ejs
+++ b/src/views/userProfile.ejs
@@ -3,7 +3,7 @@
 <head>
     <%- include('partials/head.ejs'); -%>
     <!-------vinculo hoja de estilo css-->
-     <link rel="stylesheet" href="/css/productDetail.css" />
+     <link rel="stylesheet" href="/css/userProfile.css" />
 </head>
 <body>
     <%- include('partials/header.ejs'); -%>
